--- a/wiki/ASPI.wikitext
+++ b/wiki/ASPI.wikitext
@@ -1,4 +1,5 @@
 ==English==
-===Initialism===
+==={{initialism}}===
 '''ASPI'''
-#''Advanced SCSI Peripheral Interface''
+
+#Advanced SCSI Peripheral Interface
