--- a/wiki/religious.wikitext
+++ b/wiki/religious.wikitext
@@ -1,4 +1,4 @@
-=={{en}}==
+==English==
 
 ===Adjective===
 '''religious''', '''more religious''', '''most religious'''
@@ -26,9 +26,8 @@
 
 ===Noun===
 '''religious''', plural '''religious'''
-
 # A member of a [[religious order]].
-#: ''I am only one religious among the many religious of this church.''
+#: ''I am only one '''religious''' among the many '''religious''' of this church.''
 
 ===Related Terms===
 *[[irreligious]]
