--- a/wiki/BISDN.wikitext
+++ b/wiki/BISDN.wikitext
@@ -1,1 +1,5 @@
-Broadband Integrated Service Digital Network
+==English==
+==={{initialism}}===
+'''BISDN'''
+
+#Broadband Integrated Service Digital Network
