--- a/wiki/BRAS.wikitext
+++ b/wiki/BRAS.wikitext
@@ -1,4 +1,5 @@
-'''BRAS''' 
+==English==
+==={{acronym}}===
+'''BRAS'''
 
-----
-acronym: Broadband Remote Access Server. Software product from [http://net.com net.com]
+#Broadband Remote Access Server
