--- a/wiki/BOHICA.wikitext
+++ b/wiki/BOHICA.wikitext
@@ -1,4 +1,5 @@
 ==English==
-===Acronym===
+==={{acronym}}===
 '''BOHICA'''
+
 # Bend Over, Here It Comes Again - Used colloquially to indicate that an adverse situation is about to repeat itself.
