rename one cat per CfD <two-spirit#536507>

--- a/wiki/two-spirit.wikitext
+++ b/wiki/two-spirit.wikitext
@@ -73,7 +73,7 @@ Alternate spellings are "two spirit" and "twospirit."
 *[http://oncampus.richmond.edu/faculty/ASAIL/Two-Spirit.htm Indigenous Literature with a Queer/LGBT/Two-Spirit Sensibility] 
 
 [[Category:Native American culture]]
-[[Category:Canadian First Nations culture]]
+[[Category:First Nations culture]]
 [[Category:LGBT history]]
 [[Category:Transgender in non-western cultures]]
 
