--- a/wiki/CAVU.wikitext
+++ b/wiki/CAVU.wikitext
@@ -1,4 +1,5 @@
-=={{en}}==
+==English==
+==={{acronym}}===
+'''CAVU'''
 
-===Acronym===
 # (''aviation'') Ceiling And Visibility Unrestricted (colloquial variants include ''Clear And Visibility Unrestricted'' and ''Clear Above Visibility Unrestricted''), indicating a ceiling of at least 10,000 feet and visibility of at least 10 miles; ideal flying conditions.
