--- a/wiki/passage.wikitext
+++ b/wiki/passage.wikitext
@@ -1,8 +1,9 @@
-===Noun===
-'''passage'''
+==English==
 
-#<!--DefA-->A paragraph or section of text with particular meaning.  ~ of scripture.
-#<!--DefB-->Part of a path or journey. He made his ~ through the trees carefully, mindful of the stickers.
+===Noun===
+'''passage'''  (''plural:'' '''[[passages]]''')
+# <!--DefA-->A paragraph or section of text with particular meaning.  ~ of scripture.
+# <!--DefB-->Part of a path or journey. He made his ~ through the trees carefully, mindful of the stickers.
 
 ====Translations====
 <!--DefA--> '''section of text'''
