--- a/wiki/mizzenmast.wikitext
+++ b/wiki/mizzenmast.wikitext
@@ -1,3 +1,3 @@
 ==English==
 
-'''mizzenmast'''''n.'' - The third mast or the mast aft of a [[mainmast]] on a ship having three or more masts.
+'''mizzenmast''' ''(n.)'' - The third mast or the mast aft of a [[mainmast]] on a ship having three or more masts.
