Welsh word 'parch' <parch#50821>

--- a/wiki/parch.wikitext
+++ b/wiki/parch.wikitext
@@ -6,3 +6,13 @@
 
 ===Verb (intransitive)===
 #To become scorched or superficially burnt; to be very dry.
+
+==Welsh==
+
+===Noun===
+'''parch''' ''masculine''
+#[[Respect]].
+#Vicar or minister. ([[Abbreviation]] of ''Parchedig'' (Reverend); [[Rev.]] is its English equivalent)
+
+::Dylan Thomas, ''Under Milk Wood''<br>
+::He intricately rhymes ... all night long in his druid's seedy nightie in a beer-tent black with parchs.
