--- a/wiki/planet.wikitext
+++ b/wiki/planet.wikitext
@@ -5,10 +5,10 @@ From Latin '''[[planeta]]''', '''[[planetes]]''', from Greek '''[[:el:πλανή
 
 ===Noun===
 #According to the [http://www.iau.org/ International Astronomical Union], any of the objects [[Mercury]], [[Venus]], [[Earth]], [[Mars]], [[Jupiter]], [[Saturn]], [[Uranus]], [[Neptune]], and [[Pluto]], irregardless of finding a succinct definition that matches exactly these nine bodies without leaving any out or including other objects in the Solar system.
-#A celestial object that
+#A celestial object that:
 ## Orbits the central star directly, not another body.
-## Is not be massive enough to allow nuclear fusion in its core.
-## Be massive enough that its own gravity presses it into a roughly circular shape.
+## Is not massive enough to allow nuclear fusion in its core.
+## Is massive enough that its own gravity presses it into a roughly circular shape.
 ## Is not part of a group of similar objects with overlapping orbits such as the [[asteroid belt]].
 #A [http://www.ciw.edu/IAU/div3/wgesp/definition.html working definition] by the International Astronomical Union states that a companion to a star that is smaller than required for the fusion of deuterium, estimated at 13 Jupiter masses is termed a planet.  (But see usage note below).
 #(Colloquial or Jargon) A celestial object that is like a planet, and unlike the typical moon etc., in one&rsquo;s field of study, without concern as to its orbit.  (See usage notes below.)  Careful speakers use the term [[world]] instead.
