--- a/wiki/shown.wikitext
+++ b/wiki/shown.wikitext
@@ -1,12 +1,12 @@
+==English==
+
 === Pronunciation ===
 *[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'ʃown/
 
 === Verb ===
-
 '''shown'''
-
-# past participle of to [[show]]
+# Past participle of ''to [[show]].''
 
 === Translations ===
 *[[Catalan]]: [[ensenyat]], [[mostrat]]
