--- a/wiki/judder.wikitext
+++ b/wiki/judder.wikitext
@@ -1,2 +1,7 @@
-==English=
-'''judder''' ''(v.)''- To spasm or shake violently
+==English==
+===Intransitive verb===
+'''to judder'''
+# to [[spasm]], or [[shake]] [[violently]]
+===Noun===
+'''judder'''
+# a [[spasmodic]] [[shaking]]
