--- a/wiki/passage.wikitext
+++ b/wiki/passage.wikitext
@@ -16,7 +16,7 @@
 
 <!--DefB-->'''part of a journey'''
 {{top}}
-*Finnish]]:[[kulku]], [[taival]], [[taipale]]
+*Finnish:[[kulku]], [[taival]], [[taipale]]
 {{mid}}
 *Russian: [[пассаж]]
 {{bottom}}
@@ -26,7 +26,7 @@
 ===Noun===
 '''passage''' ''f''
 
-#<!--DefC-->A paragraph or section of text with particular meaning.  ~ of scripture.
+#<!--DefA-->A paragraph or section of text with particular meaning.  ~ of scripture.
 
 [[de:passage]]
 [[et:Passage]]
