Welsh translations inserted <love#2682>

--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -51,7 +51,8 @@
 *Slovak: [[milovať]], [[ľúbiť]]
 *Swedish: [[älska]], [[vara kär i]]
 *Tamil: [[காதலி]] (between man and woman-sexual love), [[அன்பு செலுத்து]] (common love)
-*Turkish: [[sevmek]] 
+*Turkish: [[sevmek]]
+*Welsh: [[caru]] 
 {{bottom}}
 
 '''be strongly inclined towards doing'''
@@ -75,7 +76,8 @@
 *Portuguese: [[adorar]], [[amar]]
 *Russian: [[любить]]
 *Spanish: [[encantar]], [[gustar]], [[adorar]]
-*Turkish: [[sevmek]] 
+*Turkish: [[sevmek]]
+*Welsh: [[dwli ar]] 
 {{bottom}}
 
 '''(euphemistic): to have sex with'''
@@ -99,7 +101,8 @@
 *Spanish: [[hacer el amor]]
 *Swedish: [[älska]], [[älska med]]
 *Bulgarian: [[да правиш любов]] (pronounced "da pravish liubov")
-*Turkish: [[sevişmek]] 
+*Turkish: [[sevişmek]]
+*Welsh: [[caru â]] 
 {{bottom}}
 
 '''care about; will good for'''
@@ -133,7 +136,6 @@ The translations below need to be checked by native speakers and then inserted i
 *Thai: [[รัก]]
 *Tupinambá: [[aûsub]] (s-)
 *Volapük: [[löfön]]
-*Welsh: [[caru]]
 
 ===Noun===
 [[Category:English nouns]]
@@ -250,7 +252,6 @@ The translations below need to be checked by native speakers and then inserted i
 *Tamil: [[காதல்]] (sexual love between a man and a woman), [[அன்பு]], [[பாசம்]]
 *Tupinambá: [[aûsuba]] (t-)
 *Volapük: [[löf]]
-*Welsh: [[cariad]]
 
 ===Related terms===
 *[[fall in love]]
