--- a/wiki/mull.wikitext
+++ b/wiki/mull.wikitext
@@ -1,1 +1,15 @@
-#redirect [[mull]]
+==English==
+
+===Verb===
+
+'''to mull'''
+
+#To work (over) mentally; to cogitate; to ruminate; -- usually with over; as, to mull over a thought or a problem.
+#To [[chop]] marijuana so that it becomes a smokable form.
+#To heat and spice something, such as wine.
+
+===Noun===
+
+'''mull''' (mass noun)
+
+#[[Marijuana]] that has been prepared for smoking by way of chopping it.
