--- a/wiki/derrick.wikitext
+++ b/wiki/derrick.wikitext
@@ -1,5 +1,5 @@
 ==English==
 == Noun ==
-'''derrick''' - 
-#A device is used for lifting and moving large objects
+'''derrick''' 
+#A device that is used for lifting and moving large objects
 #A [[framework]] that is constructed over a mine or oil well for the purpose of [[boring]] or lowering pipes.
