--- a/wiki/hepatic.wikitext
+++ b/wiki/hepatic.wikitext
@@ -45,6 +45,7 @@ he·pat·ic
 *Hungarian: [[májra vonatkozó]], [[máj-]]; [[barnásvörös]]; [[májszínű]]
 
 ===Derived terms===
+*[[hepatectomy]]
 *[[hepatica]]
 *[[hepatitis]]
 
