pol.trans. <genus#28437>

--- a/wiki/genus.wikitext
+++ b/wiki/genus.wikitext
@@ -17,6 +17,7 @@
 *[[Interlingua]]: [[genere]]
 *Italian: [[genere]] ''m''
 *Lithuanian: [[gentis]] ''f''
+*Polish: [[rodzaj]] ''m''
 *Portuguese: [[gênero]] ''m''
 
 ===See also===
