--- a/wiki/kind.wikitext
+++ b/wiki/kind.wikitext
@@ -38,6 +38,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Polish: [[typ]] ''m'', [[rodzaj]] ''m'', [[gatunek]] ''m''
 *Spanish: [[tipo]] ''m'', [[género]] ''m'', [[clase]] ''f''
 |}
 |}
