--- a/wiki/genre.wikitext
+++ b/wiki/genre.wikitext
@@ -32,6 +32,7 @@ From French, meaning [[kind]]
 * {{io}} : genero
 *Japanese: [[ジャンル]] (janru)
 *Korean: [[장르]]
+*Polish: [[rodzaj]] ''m''
 
 ----
 
