--- a/wiki/planned_obsolescence.wikitext
+++ b/wiki/planned_obsolescence.wikitext
@@ -1,3 +1,5 @@
+[[fr:obsolescence_programmée]]
+
 '''Planned obsolescence''' (also '''built-in obsolescence''' (UK)) is the conscious decision on the part of an agency to produce a consumer product that will become [[obsolete]] in a defined time frame.  Planned obsolescence has great benefits for a producer in that it means a consumer will buy their product repeatedly, as their old one is no longer functional or desirable.  It exists in many different products from vehicles to lightbulbs, from buildings to software. There is, however, the potential backlash of consumers that become aware of such obsolescence; such consumers can shed their loyalty and buy from a company that caters to their desire for a more durable product.
 
 Planned obsolescence was first developed in the [[1920s]] and [[1930s]] when [[mass production]] had opened every minute aspect of the production process to exacting analysis.
