--- a/wiki/intact.wikitext
+++ b/wiki/intact.wikitext
@@ -4,7 +4,7 @@
 
 '''intact'''
 
-#Untouched, especially by anything that [[harms]], [[defiles]], or the like; [[uninjured]]; undefiled; left [[complete]] or [[entire]]; not [[damaged]].
+#Untouched, especially by anything that [[harms]], [[defiles]], or the like; [[uninjured]]; [[whole]]; undefiled; left [[complete]] or [[entire]]; not [[damaged]].
 #:''I packed my belongings carefully so that they would survive the move '''intact'''.''
 
 [[et:Intact]]
