fmt + expand <yellow jack#188049>

--- a/wiki/yellow_jack.wikitext
+++ b/wiki/yellow_jack.wikitext
@@ -1,1 +1,6 @@
-Yellow Jack is a slang term for the illness Yellow Fever
+==English==
+===Noun===
+'''yellow jack'''
+# Yellow Jack is a slang term for the illness [[Yellow Fever]]
+# A yellow flag used by ships as a warning of disease
+# The fish ''Caranx Bartholomaei''
