fmt + wikify <anagoge#188043>

--- a/wiki/anagoge.wikitext
+++ b/wiki/anagoge.wikitext
@@ -1,1 +1,4 @@
-The spiritual or mystical interpretation of a word or passage beyond the literal, [[Allegory|allegorical]] or moral sense.
+==English==
+===Noun===
+'''anagoge'''
+# The [[spiritual]] or [[mystical]] interpretation of a word or passage beyond the literal, [[allegorical]] or moral sense.
