wikify and expand <mizzenmast#188032>

--- a/wiki/mizzenmast.wikitext
+++ b/wiki/mizzenmast.wikitext
@@ -1,3 +1,9 @@
 ==English==
-
-'''mizzenmast''' ''(n.)'' - The third mast or the mast aft of a [[mainmast]] on a ship having three or more masts.
+===Noun===
+'''mizzenmast'''
+#{{nautical}} The third [[mast]] from the [[bow]] on a ship having three or more masts
+#{{nautical}} The [[shorter]], [[after]] mast of a ship having two masts, such as a [[ketch]] or [[yawl]]
+===Synonyms===
+*[[mizen]]
+*[[mizenmast]]
+*[[mizzen]]
