--- a/wiki/the.wikitext
+++ b/wiki/the.wikitext
@@ -14,7 +14,7 @@ From Old English ''[[&thorn;&aelig;t]]'', neuter demonstrative pronoun/article; 
 #: ''The men, the women, the boy and the girl watched the man give the birdseed to the birds.''
 # When stressed, indicates that the object in question is considered to be the best or the only one worthy of attention.
 #: ''That is ''the'' hospital to go to for heart surgery.''
-# With an adjective, indicates all persons to whom the adjective applies.
+# With an adjectival noun, indicates all persons to whom the adjectival noun applies.
 #: ''Feed the hungry, clothe the naked, comfort the afflicted, and afflict the comfortable.''
 # With a [[comparative]] or ''[[more]]'' and a verb phrase, establishes a parallel with one or more other such comparatives (often but not always a similar construction with ''the'').
 #: ''The hotter the better.''
