--- a/wiki/pus.wikitext
+++ b/wiki/pus.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Pronunciation===
-*pŭs, /pʌs/, /<tt>pVs</tt>/
-*:[[Rhymes:English:-ʌs|Rhymes: -ʌs]]
+*pŭs, /{{IPAchar|pʌs}}/, /<tt>pVs</tt>/
+*:[[Rhymes:English:-ʌs|Rhymes: {{IPAchar|-ʌs}}]]
 
 ===Noun===
 '''pus''' (''uncountable'')
@@ -10,8 +10,8 @@
 # a whitish-yellow or yellow substance made primarily of dead white blood cells and dead bacteria; normally found in regions of bacterial [[infection]]
 
 ====Derived terms====
-*[[pustule]]
 *[[pussy]]
+*[[pustule]]
 
 ====Translations====
 {{top}}
@@ -20,8 +20,8 @@
 *Danish: [[materie]]
 *Dutch: [[etter]] ''n'', pus ''n''
 *[[Esperanto]]: [[puso]]
+*Finnish: [[mätä]], [[visva]]
 {{mid}}
-*[[Finnish]]: [[mätä]], [[visva]]
 *German: [[Eiter]]
 *Italian: [[materia purulenta]]
 *Japanese: [[膿]] ([[うみ]], umi)
