--- a/wiki/g.wikitext
+++ b/wiki/g.wikitext
@@ -1,25 +1,27 @@
-:''See also'' [[g]]
+Nivlek Disease
 
-==Translingual==
-===Symbol===
-'''G'''
+Discovery:
+The Nivlek Disease is an extremely rare disease with painful symtoms.  Death is the eventual outcome of this disease.  The first case of reported Nivlek Disease was found during a blood test of an anonymous Vietnamese-American.  While performing the blood test, the blood was a dark indigo instead of the normal dark red.  Doctors immediately analyzed the blood sample and found bacteria and viruses not associated with any living organism to date.  The doctors at the hospital retained the patient for 5 days in order to keep the virus from spreading and to find symptoms of the disease.
 
-#(''metrology'') Symbol for the prefix [[giga-]].
-#Symbol for [[gauss]].
 
-'''''G'''''
+Symptoms and Factors:
+During the 5 day analysis of the patient, doctors and a special team of scientists found the following:
 
-#The gravitational constant in the formula ''F'' = ''Gm''<sub>1</sub>''m''<sub>2</sub>/''r''<sup>2</sup>; sometimes called "big G" to distinguish from ''g'' for the acceleration of gravity.
+Physical Symptoms:
+-Lice, as well as other undefined organisms living on the scalp
+-Weak Bones (bones deteriorate when coming in contact with Calcium and Vitamin C)
+-Deformed Sperm Cells
+-Vomiting
+-Deformed Skull
+-Hair growing in all different directions
+-Gray/White Hair
+-Death
 
-[[Category:Symbols]]
-[[Category:Latin letters]]
+Mental and Psycological Symptoms:
+-Extremely Low IQ
+-Hallicination, especially after using electronics
+-Constant Sexual Excitement
+-Loneliness (patient calls himself "The Lone Viet")
 
-[[de:G]]
-[[eu:G]]
-[[fr:G]]
-[[gl:G]]
-[[ia:G]]
-[[la:G]]
-[[ja:G]]
-[[pl:G]]
-[[fi:G]]
+Treatment
+There is currently no known treatment or therapy for this illness.  Studies are still showing no sign of this disease in other humans and organisms.
