-{{idiom2}} <a little bird told me#94757>

--- a/wiki/a_little_bird_told_me.wikitext
+++ b/wiki/a_little_bird_told_me.wikitext
@@ -1,10 +1,13 @@
 ==English==
+
 === Etymology ===
 The phrase has a somewhat contentious origin, some attribute it to [[Ecclesiastes]] [[wikisource:Bible%2C_English%2C_King_James%2C_Ecclesiastes#Chapter_10|10:20]] "for a bird of the air shall carry the voice, and that which hath wings shall tell the matter."  While others beleive that it originates from the Dutch saying ''[[Er lif t'el baerd]]'' "I should betray another."  A third explanation is simply an allusion to [[carrier pigeon]]s or other such messanger birds.
-{{idiom2}}
+
+===Idiom===
 '''a little bird told me''' ''also sometimes: '''a little bird whispered in my ear'''''
 # [[information]] which was [[gathered]] from a [[source]] not to be [[overtly]] [[exposed]]
 #: ''Let's just say I know because '''a little bird told me'''.''
+
 === Usage ===
 This phrase is often used more [[comically]] than [[seriously]], especially when the source of the information is obvious to both parties but neither is willing to say.
 
