--- a/wiki/s%27il_vous_pla%C3%AEt.wikitext
+++ b/wiki/s%27il_vous_pla%C3%AEt.wikitext
@@ -1,11 +1,11 @@
 ==French==
 ===Expression===
-'''s'il vous plaît'''
+'''s’il vous plaît'''
 
 #[[please]], [[if you please]]
 
 ====Usage note====
-*'''S'il vous plaît''' is used with people that one addresses using '''vous'''.  For people one addresses using '''tu''', '''s'il te plaît''' is used.
+*'''S’il vous plaît''' is used with people that one addresses using '''vous'''.  For people one addresses using '''tu''', '''s’il te plaît''' is used.
 
 [[ru:S'il vous plait]]
 [[Category:French phrasebook]]
