--- a/wiki/native.wikitext
+++ b/wiki/native.wikitext
@@ -1,9 +1,18 @@
+==English==
+
 ===Adjective===
-'''Native'''
-# Born there
+'''native'''
+# born there
+# ''(of a language):'' speaking from earliest age on; the first language one learned
+
 ===Noun===
-'''Native'''
-# A person who is native to a place
+'''native'''
+# A person who is native to a place (literal or metaphoric)
+#:''She is a regular Wiki* '''native'''.''
+#:''I need a volunteer '''native''' New Yorker for my next joke...''
+
+===See also===
+*[[nativity scene]]
 
 [[fr:native]]
 [[it:native]]
