--- a/wiki/higher.wikitext
+++ b/wiki/higher.wikitext
@@ -1,5 +1,7 @@
-=={{en}}==
+==English==
+
 ===Adjective===
-# comparative degree of [[high]]; more [[high]]
+'''higher'''
+# Comparative form of [[high]]; more [[high]].
 
 [[it:higher]]
