see also; headword <a fortiori#96853>

--- a/wiki/a_fortiori.wikitext
+++ b/wiki/a_fortiori.wikitext
@@ -4,7 +4,12 @@
 from Latin '''[[a]]''', meaning ''"with"'' and '''[[fortis]]''', meaning ''"strength"''
 
 ===Adjective===
-With stronger or greater reason
+'''''[[a]] [[fortiori]]'''''
+
+# With stronger or greater reason
+
+===See also===
+*''[[a priori]]''
 
 [[io:A fortiori]]
 [[pl:A fortiori]]
