/* See also */ ++ <a fortiori#96853>

--- a/wiki/a_fortiori.wikitext
+++ b/wiki/a_fortiori.wikitext
@@ -9,6 +9,7 @@ from Latin '''[[a]]''', meaning ''"with"'' and '''[[fortis]]''', meaning ''"stre
 # With stronger or greater reason
 
 ===See also===
+*''[[a posteriori]]''
 *''[[a priori]]''
 
 [[io:A fortiori]]
