--- a/wiki/author.wikitext
+++ b/wiki/author.wikitext
@@ -1,10 +1,12 @@
 ==English==
+
 ===Etymology===
 Latin ''[[auctor]]''
+
 ===Noun===
-'''author'''
+'''author'''  (''plural:'' '''[[authors]]''')
 # The [[originator]] or [[creator]] of a [[work]], especially a [[literary]] [[composition]].
-# [[Source]] of information
+# [[Source]] of information.
 
 ====Translations====
 {{top}}
@@ -27,6 +29,7 @@ Latin ''[[auctor]]''
 {{bottom}}
 
 ===Verb===
+{{en-infl-reg-consonant|author||}}
 # To create a work by its author.
 
 ====Translations====
