/* See also */ ++ <a posteriori#69053>

--- a/wiki/a_posteriori.wikitext
+++ b/wiki/a_posteriori.wikitext
@@ -41,9 +41,11 @@
 *German: a posteriori
 
 ===See also===
-*[[a priori]]
+*''[[a fortiori]]''
+*''[[a priori]]''
 
 ----
+
 == Latin ==
 ===Prepositional phrase ===
 
