/* See also */ ++ <a priori#66798>

--- a/wiki/a_priori.wikitext
+++ b/wiki/a_priori.wikitext
@@ -22,7 +22,8 @@ First attested 1710, from {{L.}}, literally ''from the former'', from [[priori]]
 *Russian: [[априори]]
 
 ===See also===
-*[[a posteriori]]
+*''[[a fortiori]]''
+*''[[a posteriori]]''
 
 [[et:A priori]]
 [[fr:a priori]]
