init def from redir <authors#80295>

--- a/wiki/authors.wikitext
+++ b/wiki/authors.wikitext
@@ -1,1 +1,9 @@
-#REDIRECT [[Author]]
+==English==
+
+===Noun===
+'''authors'''
+# Plural form of an [[author]].
+
+===Verb===
+'''authors'''
+# Third person form of ''to [[author]].''
