/* Etymology */ saint cyril being the inventor is not really accepted <Cyrillic#66728>

--- a/wiki/Cyrillic.wikitext
+++ b/wiki/Cyrillic.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Named for its inventor, [[w:Saint Cyril|Saint Cyril]]
+Named for its supposed inventor, [[w:Saint Cyril|Saint Cyril]]
 
 ===Adjective===
 '''Cyrillic'''
