--- a/wiki/cut.wikitext
+++ b/wiki/cut.wikitext
@@ -75,6 +75,8 @@ French: [[prêt à porter]]
 # The act or right of dividing a deck of playing cards.  ("Whose '''cut''' is it?")
 # The manner or style a garment is fasioned in.  ("I like the '''cut''' of that suit.")
 # A lower than normal rate.  ("These hand-crafted items are yours for the '''cut'''-rate price of $19.99.")
+===Translations (Noun)===
+Danish: [[snit]] (1,2,3,4,5,7), [[hug]] (1,2), tage af (6), [[skår]] (''glass, pottery''), billiger (8). [[spor]], [[mærke]], [[risse]], [[fure]], [[rille]].
 
 ===Adjective===
 '''cut'''
