--- a/wiki/high.wikitext
+++ b/wiki/high.wikitext
@@ -1,14 +1,14 @@
-=={{en}}==
+==English==
 
-===Adjective===
-
+===Pronunciation===
 *[[w:AHD|AHD]]: '''/hī/'''
 
-''' [[high]], [[higher]], [[highest]]'''
+===Adjective===
+'''high'''  ({{compar}}: '''[[higher]]''', {{superl}}: '''[[highest]]''')
+# Being [[elevated]] in [[position]] or [[status]], a [[state]] of being [[above]] many things.
+# [[tall|Tall]], [[lofty]], at a great distance above the ground.  (''at high altitude'')
+# {{slang}}: To be under the influence of a mood affecting drug; [[stoned]].<!--wikisaurus?-->
 
-#being [[elevated]] in [[position]] or [[status]], a [[state]] of being [[above]] many things
-#[[tall]], [[lofty]], at a great distance above the ground.  (''at high altitude'')
-#(''slang'') To be under the influence of a mood affecting drug; [[drunk]]
 ====Translations====
 *[[Catalan]]: [[alt]] (1,2), [[drogat]] (3)
 *[[Chinese]]: [[高]] (gao, gao1) (1,2)
