--- a/wiki/draw.wikitext
+++ b/wiki/draw.wikitext
@@ -5,22 +5,20 @@
 *[[w:IPA|IPA]]: /'dɻɑʊ/
 
 === Verb ===
-
-'''to draw''' ([[drew]], [[drawn]])
-
+{{en-infl-irreg|draw|draws|drawing|drew|drawn}}
 # to produce a [[picture]] on an appropriate background
 # to pull out (a [[gun]], a [[tooth]])
-#(upon): to rely on
-#:''She had to draw upon her experience to solve the problem''
+# (upon): to rely on
+#:''She had to '''draw''' upon her experience to solve the problem''
 # to determine the result of a [[lottery]]
 # to end a game with neither side winning
-#:''The result will be a draw if nobody scores soon.''
+#:''The result will be a '''draw''' if nobody scores soon.''
 # to [[attract]]
-#:''I was drawn to her''
+#:''I was '''drawn''' to her''
 # (of curtains etc.) to close
-#:''You should draw the curtains at night.''
+#:''You should '''draw''' the curtains at night.''
 # [[disembowel]]
-#:''He will be be hung, drawn and quartered.''
+#:''He will be be hung, '''drawn''' and quartered.''
 
 ==== Translations ====
 *Czech: [[kreslit]] (1)
@@ -37,11 +35,11 @@
 *[[Swedish]]: [[teckna]], [[rita]] (1), [[dra]] (2, 3)
 
 === Noun ===
-
+'''draw'''  (''plural:'' '''[[draws]]''')
 # when neither side wins in a game, a [[tie]]
-#:''The game ended a draw.''
+#:''The game ended a '''draw'''.''
 # something that comes out of a [[lottery]]
-#:''The draw is on Saturday.''
+#:''The '''draw''' is on Saturday.''
 # {{cricket}} The [[result]] of a two-[[innings]] match in which at least one side did not complete all their innings before time ran out. Different from a [[tie]].
 
 ==== Translations ====
@@ -54,8 +52,9 @@
 *[[drawback]], [[drawbridge]], [[drawing]]
 
 ===Related phrases===
-*''quick on the draw'' (fast reactions)
-*''draw the line at'' (set a limit, especially of tolerance)
+*[[quick on the draw]] (fast reactions)
+*[[draw the line at]] (set a limit, especially of tolerance)
+*[[luck of the draw]]
 
 [[es:draw]]
 [[io:Draw]]
