--- a/wiki/native.wikitext
+++ b/wiki/native.wikitext
@@ -6,7 +6,7 @@
 # ''(of a language):'' speaking from earliest age on; the first language one learned
 
 ===Noun===
-'''native'''
+'''native'''  (''plural:'' '''[[natives]]''')
 # A person who is native to a place (literal or metaphoric)
 #:''She is a regular Wiki* '''native'''.''
 #:''I need a volunteer '''native''' New Yorker for my next joke...''
