--- a/wiki/cut.wikitext
+++ b/wiki/cut.wikitext
@@ -83,6 +83,8 @@ Danish: [[snit]] (1,2,3,4,5,7), [[hug]] (1,2), tage af (6), [[skår]] (''glass, 
 # Of a thing which has been cut.  ("That's our finest '''cut''' of meat.")
 # {{Cricket}} of a shot played with a [[horizontal]] bat to hit the ball backward of point.
 
+
+Dabish: [[skåret]] (1)
 [[es:cut]]
 [[io:Cut]]
 [[it:cut]]
