--- a/wiki/%27n%27.wikitext
+++ b/wiki/%27n%27.wikitext
@@ -1,11 +1,11 @@
 ==English==
 ===Conjunction===
-''' 'n' '''
+'''’n’'''
 
 ====Alternative forms====
-*''' 'n '''
+*'''’n'''
 
 #(''informal'') Contraction of '''[[and]]'''.
-#:''[[rock 'n' roll]]''
+#:''[[rock 'n' roll|rock ’n’ roll]]''
 
 [[Category:English contractions|N]]
