--- a/wiki/DINK.wikitext
+++ b/wiki/DINK.wikitext
@@ -1,6 +1,8 @@
-
+''See also: [[dink]]''
 __TOC__
 ==English==
 === {{acronym}} ===
 '''DINK'''
-# Double Income No Kids
+
+# “Double Income No Kids” or “Dual Income No Kids”
+{{stub}}
