inserted hebrew translation in appropriate places, reoved from translations to be checked <tea#37365>

--- a/wiki/tea.wikitext
+++ b/wiki/tea.wikitext
@@ -60,6 +60,7 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 *{{sk}}: [[čaj#Slovak|čaj]] ''m''
 *Spanish: [[hoja de té]] ''f''
 *Thai: [[ชา]] (chaa), [[ใบชา]] (bai chaa)
+*Hebrew: [[עלי תה]] (aléi té) ''m''
 |}
 |}
 
@@ -158,6 +159,7 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 *Italian: [[tisana]] ''f''
 *Latvian: [[tēja]] ''f''
 *{{sk}}: [[čaj#Slovak|čaj]] ''m''
+*Hebrew: [[תה צמחים]] (té tsmahim) ''m''
 |}
 |}
 
@@ -173,6 +175,7 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *{{sk}}: [[čaj#Slovak|čaj]] ''m''
+*Hebrew: [[ספל תה צמחים]] (séfel té tsmahim) ''m''
 |}
 |}
 
@@ -202,7 +205,6 @@ The translations below need to be checked by native speakers and inserted into t
 
 *Dutch: [[thee#Dutch|thee]] ''m''
 *Esperanto: [[teo]]
-*Hebrew: [[תה]] (té) ''m''
 *{{ja}}: [[茶]] (ちゃ, cha), [[お茶]] ([[おちゃ]], o-chá, ''with the honorific prefix''); [[緑茶]] (りょくちゃ, ryokuchá, green tea); [[紅茶]] (こうちゃ, kōcha, ''black tea'')
 *Malay: [[ca]], [[teh]]
 *Slovene: [[čaj#Slovene|čaj]] ''m''
