related & see also <puss#187549>

--- a/wiki/puss.wikitext
+++ b/wiki/puss.wikitext
@@ -5,3 +5,9 @@
 #: ''Our local theatre is showing the pantomime Puss in Boots''
 #(''slang'') The [[mouth]]
 #: ''She gave him a slap in the '''puss'''.''
+
+====Related terms====
+*[[pussy]]
+
+===See also===
+*[[moggie]], [[moggy]]
