--- a/wiki/bellicose.wikitext
+++ b/wiki/bellicose.wikitext
@@ -2,4 +2,6 @@
 
 == Adjective ==
 
-'''bellicose'''- Warlike in nature, aggressive, hostile.
+'''bellicose'''
+1. Warlike in nature, aggressive, hostile.
+2. Showing or having the impulse to be combative.
