--- a/wiki/bellicose.wikitext
+++ b/wiki/bellicose.wikitext
@@ -3,5 +3,5 @@
 == Adjective ==
 
 '''bellicose'''
-1. Warlike in nature, aggressive, hostile.
-2. Showing or having the impulse to be combative.
+*1. Warlike in nature, aggressive, hostile.
+*2. Showing or having the impulse to be combative.
