/* Noun */ Plural: One glass of waragi, two glasses of waragi etc. <waragi#176962>

--- a/wiki/waragi.wikitext
+++ b/wiki/waragi.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-'''waragi''' (''plural'': '''waragis''')
+'''waragi'''
 # an alcoholic drink made from [[banana]]s.
 
 [[Category:Swahili derivations]]
