--- a/wiki/interstice.wikitext
+++ b/wiki/interstice.wikitext
@@ -6,6 +6,7 @@
 #:'''Quotation'''
 #:*'''1999''' That he ran the risk of blowing out the stained-glass windows was of no consequence since no one liked them anyway, and the paper mill fumes were gnawing at the interstitial lead. - Neal Stephenson, ''Cryptonomicon''.
 # an [[interval]] of [[time]] required by the Roman [[Catholic]] [[Church]] between the attainment of different [[degree]]s of an [[order]].
+{{seeCites}}
 
 ===Derived terms===
 *[[interstitial]]
