homophone; see also++ <lichen#185096>

--- a/wiki/lichen.wikitext
+++ b/wiki/lichen.wikitext
@@ -1,14 +1,21 @@
 ==English==
+===Pronunciation===
+====Homophones====
+*[[liken]]
+
 ===Noun===
 {{wikipedia}}
 '''lichen'''
 # any of many [[symbiotic]] [[organism]]s, being [[association]]s of [[fungi]] and [[algae]]; often found as [[white]] or [[yellow]] [[patch]]es on old [[wall]]s etc
+
 ====Translations====
 {{top}}
-{{mid}}
 *Russian: [[лишайник]] ''m''
+{{mid}}
 {{bottom}}
 
 ===See also===
+*[[fungus]]
 *[[Iceland moss]]
+*[[moss]]
 *[[reindeer moss]]
