--- a/wiki/cavus.wikitext
+++ b/wiki/cavus.wikitext
@@ -1,4 +1,4 @@
 '''''Cavus''''' (pl. ''cavi'') is the [[Latin]] word for 'hole'. It is used in [[planetary geology]] to refer to irregular steep-sided depressions that do not seem to be [[impact crater]]s.
 
-[[de:Cavus]]
+[[de:Cavus]] [[fr:Cavus]]
 {{Geol-stub}}
