--- a/wiki/bellicose.wikitext
+++ b/wiki/bellicose.wikitext
@@ -1,7 +1,6 @@
 ==English==
-
-== Adjective ==
-
+===Adjective===
 '''bellicose'''
-*1. Warlike in nature, aggressive, hostile.
-*2. Showing or having the impulse to be combative.
+
+# [[Warlike]] in nature, [[aggressive]], [[hostile]].
+# Showing or having the impulse to be [[combative]].
