--- a/wiki/samurai.wikitext
+++ b/wiki/samurai.wikitext
@@ -1,1 +1,37 @@
-#redirect [[samurai]]
+==English=={{Wikipedia}}
+===Pronunciation===
+*/săm'''ʹ'''(y)ərīʹ/
+*[ˈsæm(j)əˌɹaɪ]
+*:[[Rhymes:English:-æməraɪ|Rhymes: -æməraɪ]]
+*:[[Rhymes:English:-æmjəraɪ|Rhymes: -æmjəraɪ]]
+
+===Etymology===
+From Japanese [[侍]] ([[さむらい]], samurai).
+
+===Noun===
+'''samurai''' (''Plural:'' '''samurai''', ''sometimes'' [[samurais]])
+
+#In feudal [[Japan]], a samurai was a soldier of noble birth who followed the code of [[bushido]] and served a [[daimyo]].
+
+====Translations====
+*Chinese: [[武士]] (wǔ shì)
+*Dutch: [[samoerai]] ''m''
+*Finnish: samurai
+*French: [[samouraï]] ''m'', samourai ''m''
+*German: Samurai ''m''
+*Greek: [[Σαμουράι]] ''m'' (samour&aacute;i)
+*[[Interlingua]]: samurai
+*Italian: samurai ''m''
+*Japanese: [[侍]] ([[さむらい]], samurai)
+*Latvian: [[samurajs]] ''m''
+*Polish: [[samuraj]] ''m''
+*Portuguese: samurai ''m''
+*{{sk}}: [[samuraj#Slovak|samuraj]] ''m''
+*Slovene: [[samuraj]] ''m''
+*Spanish: samurai ''m''
+*Swedish: [[samuraj]]
+
+===See also===
+*[[ronin]]
+
+[[de:Samurai]]
