English definition <mañana#91213>

--- a/wiki/ma%C3%B1ana.wikitext
+++ b/wiki/ma%C3%B1ana.wikitext
@@ -10,6 +10,12 @@
 *[[anteayer]]
 *[[ayer]]
 
+==English==
+===Adverb===
+'''mañana'''
+# [[tomorrow]]
+# Sometime in the [[future]]
+
 [[Category:English words spelled with diacritics or ligatures|Manana]]
 
 [[hu:Mañana]]
