--- a/wiki/checksum.wikitext
+++ b/wiki/checksum.wikitext
@@ -2,6 +2,7 @@
 ===Noun===
 {{wikipedia}}
 '''checksum'''
-# a [[digit]] or [[character]], derived [[algorithm]]icly  from the content of some [[data]], used to [[check]] whether [[error]]s have occurred in [[transmission]], [[storage]] or [[data entry]]
+# a [[digit]] or [[character]], derived by applying a suitable [[algorithm]] to some [[data]], used to [[check]] whether [[error]]s have occurred in [[transmission]], [[storage]] or [[data entry]]
+
 ===See also===
 *[[cyclic redundancy check]] / [[CRC]]
