--- a/wiki/cosmopolitan.wikitext
+++ b/wiki/cosmopolitan.wikitext
@@ -1,1 +1,1 @@
-cosmopolitan - when a applied to a city, cosmolitan signifies that it has an exiciting and diverse range of cultural or ethnic variation, expressed perhaps in custums, music , food etc.
+cosmopolitan - when a applied to a city, cosmolitan signifies that it has an exciting and diverse range of cultural or ethnic variation, expressed perhaps in custums, music , food etc.
