--- a/wiki/scunner.wikitext
+++ b/wiki/scunner.wikitext
@@ -1,1 +1,12 @@
-#redirect [[scunner]]
+==English==
+===Verb===
+'''scunner'''
+# to be sick of
+
+===Noun===
+'''scunner'''
+# Derogatory term in North Yorkshire for urban youth, similar to Tyneside's "charva", and usually associated with trouble or petty crime.  Older scunners, i.e. young adults, would be recognisable as chavs.
+
+===Proper noun===
+'''scunner'''
+# The nickname of the [[R-1]] ballistic missile built by the Soviet Union
