--- a/wiki/bamboozle.wikitext
+++ b/wiki/bamboozle.wikitext
@@ -1,5 +1,5 @@
 ==English==
 ===Verb===
 '''to bamboozle'''
-# to [[con]], [[defraud]]
+# (informal) to [[con]], [[defraud]], [[trick]]
 # {{vulgar}} to make a fool of any one, to humbug or impose on him.
