/* Verb */  The 2 definitions given before are not distinct; I have amalgamated them <bamboozle#180812>

--- a/wiki/bamboozle.wikitext
+++ b/wiki/bamboozle.wikitext
@@ -1,5 +1,4 @@
 ==English==
 ===Verb===
 '''to bamboozle'''
-# (informal) to [[con]], [[defraud]], [[trick]]
-# {{vulgar}} to make a fool of any one, to humbug or impose on him.
+# (informal) to [[con]], [[defraud]], [[trick]],  to make a fool of, to humbug or impose on someone.
