/* Verb */ Transitive & inransitive uses need distinguishing <drown#61661>

--- a/wiki/drown.wikitext
+++ b/wiki/drown.wikitext
@@ -6,10 +6,10 @@
 ===Verb===
 '''to drown''' ([[drowns]], [[drowned]], [[drowning]])
 
-#To be [[suffocate]]d in water or other fluid; to [[perish]] in water.
+#To be [[suffocate]]d in water or other fluid; to [[perish]] by suffocation in water.
 #To [[overwhelm]] in water; to [[submerge]]; to [[inundate]].
 #To deprive of life by [[immersion]] in water or other liquid.
-#To [[overpower]]; to [[overcome]]; to [[extinguish]]; &mdash; said especially of sound.
+#To [[overpower]]; to [[overcome]]; to [[extinguish]]; &mdash; said especially of sound. Usually in the form "drown out"
 
 ====Derived terms====
 *[[drowning]]<!-- countable noun -->
