--- a/wiki/crocodile.wikitext
+++ b/wiki/crocodile.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 '''crocodile''' (plural: [[crocodiles]]; diminutive: [[croc]])
 
-#an [[amphibious]] [[reptile]] related to [[alligator]].
+#a large, [[predatory]] [[amphibious]] [[reptile]] related to [[alligator]].
 
 ====Related terms====
 *[[crocodile tears]]
