--- a/wiki/commonality.wikitext
+++ b/wiki/commonality.wikitext
@@ -15,4 +15,4 @@ Source: from [[Federal Standard 1037C]] and from [[MIL-STD-188]]
 The term is also used to describe the similarities between different models of an [[Airliner]] family. For example, the commonality between the [[Boeing 757]] and [[Boeing 767]] aircraft allowed the hijackers participating in the [[September 11, 2001 Terrorist Attack]] to operate both the 757 and 767 with experience of only a single cockpit type.
 
 
-[[Category:Telecommunications]]
+[[Category:Telecommunications_terms]]
