--- a/wiki/lance.wikitext
+++ b/wiki/lance.wikitext
@@ -93,4 +93,13 @@
 
 #''plural of'' '''[[lancia]]'''
 
+-----
+
+==Spanish==
+===Verb form===
+'''lance'''
+
+# ''first-, third-person singular subjunctive present of [[lanzar]]''
+# ''third-person singular imperative of lanzar''
+
 [[it:lance]]
