--- a/wiki/philosophistic.wikitext
+++ b/wiki/philosophistic.wikitext
@@ -6,7 +6,7 @@ Part of speech : Adjective
 
 Definition :
 
-Exibiting philosophical and vague with the intent of being annoying or irritating.Used normally to describe a mood or feeling.
+Exibiting philosophical and vague behavior or mannerism with the intent of being annoying and or irritating.Used normally to describe a mood or feeling.
 
 Example of use :
 
