--- a/wiki/beaker.wikitext
+++ b/wiki/beaker.wikitext
@@ -1,3 +1,8 @@
-From Italian bicchiere (I think!)
+==English==
+===Etymology===
 
-A vessel for drinking from, especially one suitable for small children.
+: From '''bicārius''' ([[Medieval Latin]]: drinking vessel)
+
+===Noun===
+'''beaker'''
+# A vessel for drinking from, especially one suitable for small children.
