fmt; (more cleanup required) <cosmopolitan#188086>

--- a/wiki/cosmopolitan.wikitext
+++ b/wiki/cosmopolitan.wikitext
@@ -1,1 +1,5 @@
-cosmopolitan - when a applied to a city, cosmopolitan signifies that it has an exciting and diverse range of cultural or ethnic variation, expressed perhaps in custums, music , food etc.
+==English==
+===Adjective===
+'''cosmopolitan'''
+{{cleanup}}
+# When a applied to a city, cosmopolitan signifies that it has an exciting and diverse range of cultural or ethnic variation, expressed perhaps in custums, music , food etc.
