{{Wikipedia}}, pronunciation <beaker#188087>

--- a/wiki/beaker.wikitext
+++ b/wiki/beaker.wikitext
@@ -1,7 +1,11 @@
+{{Wikipedia}}
 ==English==
 ===Etymology===
 
 : From '''bicārius''' ([[Medieval Latin]]: drinking vessel)
+
+===Pronunciation===
+*'''beaker''': [[Pronunciation guide|IPA]]:/ˈbikɚ/
 
 ===Noun===
 '''beaker'''
