--- a/wiki/second_person.wikitext
+++ b/wiki/second_person.wikitext
@@ -2,8 +2,10 @@
 ===Noun===
 '''second person'''
 
-#The form of a [[verb]] used (in English and other languages) with the pronouns ''[[thou]]'' and ''[[you]]'' (or their equivalents in other languages).
+#The form of a [[verb]] used (in English and other languages) with the pronouns ''[[thou]]'' and ''[[you]]'' (or their equivalents in other languages). In many languages the singular, applying to one person, and plural, applying to several people, are distinct.
 #:''"Are" is the second person of "to be"''
+#:''"amas" is the second person singular of the [[Spanish]] verb "amar"''
+#:''"amais" is the second person plural of the [[Spanish]] verb "amar"''
 #A form of narrative writing using verbs in the second person in order to give the impression that the action is happening to the narrator.
 
 ===Translations===
