--- a/wiki/lanc%C3%A8rent.wikitext
+++ b/wiki/lanc%C3%A8rent.wikitext
@@ -2,4 +2,4 @@
 ===Verb form===
 '''lancèrent'''
 
-# ''third-person plural indicative past participle of [[lancer]]''
+# ''third-person plural indicative past historic of [[lancer]]''
