--- a/wiki/waragi.wikitext
+++ b/wiki/waragi.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-'''waragi'''
+'''waragi''' (''plural'': '''waragis''')
 # an alcoholic drink made from [[banana]]s.
 
 [[Category:Swahili derivations]]
