--- a/wiki/fistula.wikitext
+++ b/wiki/fistula.wikitext
@@ -1,7 +1,7 @@
 {{Wikipedia}}
 ==English==
 ===Pronunciation===
-*'''fistula''': [[Pronunciation guide|IPA]]:/fɪstʃələ/
+*'''fistula''': [[Pronunciation guide|IPA]]:/ˈfɪstʃələ/
 ===Noun===
 '''fistula''' (''plural'' '''fistulas''' or '''fistulae''')
 # An [[abnormal]] [[connection]] or passageway between [[organ]]s or [[vessel]]s that normally do not connect.
