/* Verb */  figurative use <embroider#61166>

--- a/wiki/embroider.wikitext
+++ b/wiki/embroider.wikitext
@@ -1,3 +1,4 @@
 =={{en}}==
 ===Verb===
-# to stitch with needle and thread a decorative design on fabric
+# to stitch a decorative design on fabric with needle and thread of various colours
+# (figurative) to add imaginary detail to a narrative to make it more interesting or acceptable
