--- a/wiki/cosmopolitan.wikitext
+++ b/wiki/cosmopolitan.wikitext
@@ -2,4 +2,4 @@
 ===Adjective===
 '''cosmopolitan'''
 {{cleanup}}
-# When a applied to a city, cosmopolitan signifies that it has an exciting and diverse range of cultural or ethnic variation, expressed perhaps in custums, music , food etc.
+# When a applied to a city, cosmopolitan signifies that it has an exciting and diverse range of cultural or ethnic variation, expressed perhaps in customs, music , food etc.
