--- a/wiki/wayside_pulpit.wikitext
+++ b/wiki/wayside_pulpit.wikitext
@@ -1,5 +1,5 @@
 {{wikify}}
-Roadside signs fronting churches and other religious worship centers, whose messages are changed regularly, often weekly, and are typically welcoming or scriptural, philosophical, spiritual, or otherwise uplifting quotations, are called "Wayside Pulpits."
+a '''Wayside Pulpit''' is a roadside sign fronting churches and other religious worship centers, whose message is changed regularly, often weekly, and is typically welcoming or scriptural, [[[philosophy|philosophical]], spiritual, or otherwise uplifting quotations.
 
 Among denominations, [http://en.wikipedia.org/wiki/Unitarian_Universalist Unitarian Universalists] are the ones who most commonly use the term for their message marquees.   The [http://en.wikipedia.org/wiki/Unitarian_Universalist_Association Unitarian Universalist Association] has provided 
 congregations and communities spiritual refreshment in the form 
