--- a/wiki/tragedy.wikitext
+++ b/wiki/tragedy.wikitext
@@ -1,4 +1,8 @@
 ==English==
+
+===Etymology===
+From the Greek tragoidia, "goat-songs": tragos (goat) + aeidein (to sing)
+
 ===Noun===
 '''tragedy''' (''plural'' tragedies)
 {{wikipedia}}
