handy {{physics}} template <antimatter#188090>

--- a/wiki/antimatter.wikitext
+++ b/wiki/antimatter.wikitext
@@ -4,8 +4,7 @@
 *'''antimatter''': [[Pronunciation guide|IPA]]:/ˈæntimæˌtɚ/, /ˈæn.taɪ.mæˌtɚ/
 ===Noun===
 '''antimatter''' {{uncountable}}
-# [[Matter]] that is composed of the [[antiparticle]]s of those that [[constitute]] normal matter.
+# {{physics}} [[Matter]] that is composed of the [[antiparticle]]s of those that [[constitute]] normal matter.
 ===Adjective===
 '''antimatter''' (no ''[[comparative]]'' or ''[[superlative]]'')
 # Consisting of antimatter.
-[[Category:Physics]]
