handy {{medicine}} template <fistula#188102>

--- a/wiki/fistula.wikitext
+++ b/wiki/fistula.wikitext
@@ -4,7 +4,6 @@
 *'''fistula''': [[Pronunciation guide|IPA]]:/ˈfɪstʃələ/
 ===Noun===
 '''fistula''' (''plural'' '''fistulas''' or '''fistulae''')
-# An [[abnormal]] [[connection]] or passageway between [[organ]]s or [[vessel]]s that normally do not connect.
+# {{medicine}} An [[abnormal]] [[connection]] or passageway between [[organ]]s or [[vessel]]s that normally do not connect.
 
 [[Category:English irregular plurals]]
-[[Category:Medicine]]
