--- a/wiki/lanza.wikitext
+++ b/wiki/lanza.wikitext
@@ -4,5 +4,11 @@
 
 # [[lance]], [[spear]], [[glaive]]
 
+===Verb form===
+'''lanza'''
+
+# ''third-person singular indicative present of [[lanzar]]''
+# ''second-person singular imperative of lanzar''
+
 [[fr:lanza]]
 [[hu:Lanza]]
