a few definitions added, not complete <grate#38114>

--- a/wiki/grate.wikitext
+++ b/wiki/grate.wikitext
@@ -7,20 +7,23 @@
 
 ===Noun===
 '''grate''' (plural: [[grates]])
+#a horizontal metal [[grille]] through which water, ash, or small objects can fall, while larger objects cannot
 
 ====Synonyms====
 *[[grille]]
 
-===Transitive erb===
+===Transitive verb===
 '''to grate''' ([[grated]], grated)
+#to shred things, usually foodstuffs, by rubbing across a grater
 
 ===Intransitive verb===
 '''to grate''' ([[grated]], grated)
 
+
 ===Related terms===
 *[[grater]]
 *[[gratings]]
-
+*[[grate upon]]
 [[io:Grate]]
 [[it:grate]]
 [[pl:Grate]]
