copy edit <e-mail#1750256>

--- a/wiki/e-mail.wikitext
+++ b/wiki/e-mail.wikitext
@@ -24,7 +24,7 @@ Contraction of '''[[electronic mail]]'''.
 
 ==== Usage note ====
 ===== e-mail vs. email =====
-The spellings ''email'' and ''e-mail'' are both in common use.  The former sees somewhat more frequent use<!-- help me back this up? -->, though it is sometimes prescribed against.  In general, the latter is more likely to be considered the correct form.
+The spellings ''e-mail'' and ''email'' are both in common use.  The latter sees somewhat more frequent use<!-- help me back this up? -->, though it is sometimes prescribed against.  In general, the hyphenated form is more likely to be considered correct.
 
 ===== e-mail vs. e-mails =====
 As a contraction of ''[[electronic mail]]'', some feel that ''e-mail'' should follow the same pluralization rules and be uncountable, prohibiting the forms ''e-mails'' and ''an e-mail''.  Others feel that it is not necessary for ''e-mail'' to maintain grammatical similarity to ''mail'', and prefer to pluralize the term as a countable noun.  This issue is hotly debated, but it is seldom considered incorrect to use the uncountable form.
