etym, variant spelling <e-book#85785>

--- a/wiki/e-book.wikitext
+++ b/wiki/e-book.wikitext
@@ -1,4 +1,10 @@
 ==English==
+===Etymology===
+Contraction of '''[[electronic book]]'''.
+
+===Variant spellings===
+*ebook
+
 ===Noun===
 '''e-book''' ([[e-books]])
 
