--- a/wiki/airworthiness.wikitext
+++ b/wiki/airworthiness.wikitext
@@ -1,4 +1,4 @@
 ==English==
 
 == Adjective ==
-'''airworthiness''' - The state of being fit for flight.
+'''airworthiness''' - The state of being fit for [[flight]].
