--- a/wiki/putnik.wikitext
+++ b/wiki/putnik.wikitext
@@ -2,6 +2,7 @@
 ===Noun===
 '''putnik''' ''m s''
 #a [[passenger]]
+#a [[traveller]]
 [[Category:Bosnian common nouns]]
 
 ----
@@ -10,6 +11,7 @@
 ===Noun===
 '''putnik''' ''m s''
 #a [[passenger]]
+#a [[traveller]]
 ====See also====
 *[[путник]]
 [[Category:Serbian common nouns]]
