--- a/wiki/%D0%BF%D1%83%D1%82%D0%BD%D0%B8%D0%BA.wikitext
+++ b/wiki/%D0%BF%D1%83%D1%82%D0%BD%D0%B8%D0%BA.wikitext
@@ -46,8 +46,9 @@
 ----
 ==Serbian==
 ===Noun===
-'''путник''' ''m''
+'''путник''' ''m s''
 #a [[passenger]]
+#a [[traveller]]
 ====See also====
 *[[putnik]]
 [[Category:Serbian common nouns]]
