--- a/wiki/tragedy.wikitext
+++ b/wiki/tragedy.wikitext
@@ -16,9 +16,16 @@ From the Greek tragoidia, "goat-songs": tragos (goat) + aeidein (to sing)
 *[[tragic irony]]
 
 ===Translations===
+{{top}}
+*Bosnian: [[tragedija]] ''f''
 *Chinese: [[悲剧]]; [[惨案]]
 *French: [[tragédie]]
 *Italian: [[tragedia]]
+{{mid}}
 *Japanese: [[悲劇]]
+*Serbian:
+*:Cyrillic: [[трагедија]] ''f''
+*:Latin: [[tragedija]] ''f''
 *Swedish: [[tragedi]] ''c''
+{{bottom}}
 [[Category:Greek derivations]]
