--- a/wiki/tragedy.wikitext
+++ b/wiki/tragedy.wikitext
@@ -6,7 +6,7 @@ From the Greek tragoidia, "goat-songs": tragos (goat) + aeidein (to sing)
 ===Noun===
 '''tragedy''' (''plural'' tragedies)
 {{wikipedia}}
-#A [[drama]] or similar work, in which the main [[character]] is brought to [[ruin]] of otherwise suffers the [[extreme]] [[consequence]]s of some [[tragic]] [[flaw]] or [[weakness]] of character.
+#A [[drama]] or similar work, in which the main [[character]] is brought to [[ruin]] or otherwise suffers the [[extreme]] [[consequence]]s of some [[tragic]] [[flaw]] or [[weakness]] of character.
 #The [[genre]] of such works, and the [[art]] of producing them.
 #A [[disastrous]] [[event]], especially one involving great [[loss]] of [[life]] or [[injury]]
 
