--- a/wiki/anisette.wikitext
+++ b/wiki/anisette.wikitext
@@ -1,4 +1,4 @@
 ==English==
 
 == Noun ==
-'''anisette'''- A [[alcoholic]] [[beverage]] flavored with [[anise]]
+'''anisette'''- An [[alcoholic]] [[beverage]] flavored with [[anise]]
