--- a/wiki/antiballistic.wikitext
+++ b/wiki/antiballistic.wikitext
@@ -1,4 +1,4 @@
 ==English==
 
 == Adjective ==
-'''antiballistic''- designed to [[detect]], [[intercept]], and [[destroy]] [[ballistic]] [[missiles]]
+'''antiballistic'''- designed to [[detect]], [[intercept]], and [[destroy]] [[ballistic]] [[missiles]]
