cleanup, expand, wikify <fuddy-duddy#2966>

--- a/wiki/fuddy-duddy.wikitext
+++ b/wiki/fuddy-duddy.wikitext
@@ -1,5 +1,7 @@
+==English
 ===Noun===
-#An ineffective person.
-#An old-fashioned person.
+'''fuddy-duddy'''
+#An [[old-fashioned]] or [[stodgy]] person.
+#An [[ineffective]] person.
 
 [[Category:Unknown etymology]]<!--SOED-->
