--- a/wiki/aye.wikitext
+++ b/wiki/aye.wikitext
@@ -3,7 +3,7 @@
 [[Yes]]; [[yea]]; a word expressing [[assent]], or an [[affirmative]] answer to a question. It is much used in ''[[viva voce]]'' voting in legislative bodies, etc.
 
 ===Noun===
-An affirmative vote; one who votes in the affirmative; as, "To call for the ayes and noes;" "The ayes have it."
+An affirmative vote; one who votes in the affirmative; as, "To call for the ayes and nays;" "The ayes have it."
 
 [[io:Aye]]
 [[ku:aye]]
