--- a/wiki/censorware.wikitext
+++ b/wiki/censorware.wikitext
@@ -7,6 +7,7 @@
 '''censorware'''
 
 #Software or hardware used to filter content on the Internet or block Internet access.  Content filtering software.
+#Component in an operating system or console used to disable reception of media on the basis of content believed to be objectionable.
 
 ===Translations===
 *[[Chinese]]: [[审查商品]] (shenzha shangpin), (''software'') [[审查软件]] (shenzha ruanjian) 
