--- a/wiki/dived.wikitext
+++ b/wiki/dived.wikitext
@@ -13,6 +13,7 @@
 *[[German]]: [[getaucht]]
 *[[Indonesian]]: [[selam]], [[selam|menyelam]], [[selam|menyelami]]
 *[[Japanese]]: [[潜った]] ([[もぐった]], mogutta)
+*[[American]]: [[dove]]
 
 === Verb ===
 
